--- a/todo.css
+++ b/todo.css
@@ -39,3 +39,10 @@ body {
     padding-top: 10px;
     padding-bottom: 10px;
   }
+  .center {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin:auto;
+    margin-top: 12%;
+  }
